// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders a card with a primary title 1`] = `
<div
  className="card"
>
  <h2
    className="card-primarytitle title-l"
  >
    Card Title
  </h2>
</div>
`;

exports[`Card renders a card with a primary title and a divider 1`] = `
<div
  className="card"
>
  <h2
    className="card-primarytitle title-l"
  >
    Card Title
  </h2>
  <div
    className="card-divider"
  />
</div>
`;

exports[`Card renders an empty card 1`] = `
<div
  className="card"
/>
`;
